spring-rest-server/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: simple-rest-server
  name: simple-rest-server-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "YOUR_DOMAIN"
      http:
        paths:
          - backend:
              service:
                name: simple-rest-server-service
                port:
                  name: http
            path: /
            pathType: Prefix
